reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_many_variants-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < LargeEnum > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Literal, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field, RootModel

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsSerdeLargeEnumAlpha(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Alpha"] = Field(default="Alpha", description="Discriminator field")


class ReflectapiDemoTestsSerdeLargeEnumBeta(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Beta"] = Field(default="Beta", description="Discriminator field")


class ReflectapiDemoTestsSerdeLargeEnumGamma(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Gamma"] = Field(default="Gamma", description="Discriminator field")
    x: int


class ReflectapiDemoTestsSerdeLargeEnumDelta(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Delta"] = Field(default="Delta", description="Discriminator field")
    value: str


class ReflectapiDemoTestsSerdeLargeEnumEpsilon(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Epsilon"] = Field(
        default="Epsilon", description="Discriminator field"
    )


class ReflectapiDemoTestsSerdeLargeEnumZeta(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Zeta"] = Field(default="Zeta", description="Discriminator field")
    y: bool


class ReflectapiDemoTestsSerdeLargeEnumEta(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Eta"] = Field(default="Eta", description="Discriminator field")


class ReflectapiDemoTestsSerdeLargeEnumTheta(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Theta"] = Field(default="Theta", description="Discriminator field")
    value: int


class ReflectapiDemoTestsSerdeLargeEnumIota(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Iota"] = Field(default="Iota", description="Discriminator field")


class ReflectapiDemoTestsSerdeLargeEnumKappa(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Kappa"] = Field(default="Kappa", description="Discriminator field")
    z: float


class ReflectapiDemoTestsSerdeLargeEnumLambda(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Lambda"] = Field(default="Lambda", description="Discriminator field")


class ReflectapiDemoTestsSerdeLargeEnumMu(BaseModel):
    model_config = ConfigDict(extra="ignore", populate_by_name=True)

    type: Literal["Mu"] = Field(default="Mu", description="Discriminator field")
    w: str
    v: int


class ReflectapiDemoTestsSerdeLargeEnum(RootModel):
    root: Annotated[
        Union[
            ReflectapiDemoTestsSerdeLargeEnumAlpha,
            ReflectapiDemoTestsSerdeLargeEnumBeta,
            ReflectapiDemoTestsSerdeLargeEnumGamma,
            ReflectapiDemoTestsSerdeLargeEnumDelta,
            ReflectapiDemoTestsSerdeLargeEnumEpsilon,
            ReflectapiDemoTestsSerdeLargeEnumZeta,
            ReflectapiDemoTestsSerdeLargeEnumEta,
            ReflectapiDemoTestsSerdeLargeEnumTheta,
            ReflectapiDemoTestsSerdeLargeEnumIota,
            ReflectapiDemoTestsSerdeLargeEnumKappa,
            ReflectapiDemoTestsSerdeLargeEnumLambda,
            ReflectapiDemoTestsSerdeLargeEnumMu,
        ],
        Field(discriminator="type"),
    ]


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            LargeEnumAlpha = ReflectapiDemoTestsSerdeLargeEnumAlpha
            LargeEnumBeta = ReflectapiDemoTestsSerdeLargeEnumBeta
            LargeEnumGamma = ReflectapiDemoTestsSerdeLargeEnumGamma
            LargeEnumDelta = ReflectapiDemoTestsSerdeLargeEnumDelta
            LargeEnumEpsilon = ReflectapiDemoTestsSerdeLargeEnumEpsilon
            LargeEnumZeta = ReflectapiDemoTestsSerdeLargeEnumZeta
            LargeEnumEta = ReflectapiDemoTestsSerdeLargeEnumEta
            LargeEnumTheta = ReflectapiDemoTestsSerdeLargeEnumTheta
            LargeEnumIota = ReflectapiDemoTestsSerdeLargeEnumIota
            LargeEnumKappa = ReflectapiDemoTestsSerdeLargeEnumKappa
            LargeEnumLambda = ReflectapiDemoTestsSerdeLargeEnumLambda
            LargeEnumMu = ReflectapiDemoTestsSerdeLargeEnumMu
            LargeEnum = ReflectapiDemoTestsSerdeLargeEnum


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.LargeEnum] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.LargeEnum]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.LargeEnum]: Response containing reflectapi_demo.tests.serde.LargeEnum data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.LargeEnum,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.LargeEnum] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.LargeEnum]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.LargeEnum]: Response containing reflectapi_demo.tests.serde.LargeEnum data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.LargeEnum,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeLargeEnum,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
