reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_many_variants.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::LargeEnum"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::LargeEnum"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "primitive",
        "name": "f64",
        "description": "64-bit floating point number"
      },
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::LargeEnum",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "Alpha",
            "fields": "none"
          },
          {
            "name": "Beta",
            "fields": "none"
          },
          {
            "name": "Gamma",
            "fields": {
              "named": [
                {
                  "name": "x",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Delta",
            "fields": {
              "named": [
                {
                  "name": "value",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Epsilon",
            "fields": "none"
          },
          {
            "name": "Zeta",
            "fields": {
              "named": [
                {
                  "name": "y",
                  "type": {
                    "name": "bool"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Eta",
            "fields": "none"
          },
          {
            "name": "Theta",
            "fields": {
              "named": [
                {
                  "name": "value",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Iota",
            "fields": "none"
          },
          {
            "name": "Kappa",
            "fields": {
              "named": [
                {
                  "name": "z",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Lambda",
            "fields": "none"
          },
          {
            "name": "Mu",
            "fields": {
              "named": [
                {
                  "name": "w",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                },
                {
                  "name": "v",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "bool",
        "description": "Boolean value"
      },
      {
        "kind": "primitive",
        "name": "f64",
        "description": "64-bit floating point number"
      },
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::LargeEnum",
        "representation": {
          "internal": {
            "tag": "type"
          }
        },
        "variants": [
          {
            "name": "Alpha",
            "fields": "none"
          },
          {
            "name": "Beta",
            "fields": "none"
          },
          {
            "name": "Gamma",
            "fields": {
              "named": [
                {
                  "name": "x",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Delta",
            "fields": {
              "named": [
                {
                  "name": "value",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Epsilon",
            "fields": "none"
          },
          {
            "name": "Zeta",
            "fields": {
              "named": [
                {
                  "name": "y",
                  "type": {
                    "name": "bool"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Eta",
            "fields": "none"
          },
          {
            "name": "Theta",
            "fields": {
              "named": [
                {
                  "name": "value",
                  "type": {
                    "name": "u32"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Iota",
            "fields": "none"
          },
          {
            "name": "Kappa",
            "fields": {
              "named": [
                {
                  "name": "z",
                  "type": {
                    "name": "f64"
                  },
                  "required": true
                }
              ]
            }
          },
          {
            "name": "Lambda",
            "fields": "none"
          },
          {
            "name": "Mu",
            "fields": {
              "named": [
                {
                  "name": "w",
                  "type": {
                    "name": "std::string::String"
                  },
                  "required": true
                },
                {
                  "name": "v",
                  "type": {
                    "name": "i32"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "std::string::String",
        "description": "UTF-8 encoded string"
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
