reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_rename_to_invalid_chars-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < TestEnumWithRenameToInvalidChars > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible
from reflectapi_runtime import (
    parse_externally_tagged as _parse_externally_tagged,
    serialize_externally_tagged as _serialize_externally_tagged,
)


class ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant(
    BaseModel
):
    """Variant1 variant"""

    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    f: int = Field(serialization_alias="field-name&&", validation_alias="field-name&&")


# Externally tagged enum using RootModel
ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariants = (
    ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant
)


class ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidChars(
    RootModel[ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariants]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "variant-name&&": lambda v: (
                    ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant(
                        **v
                    )
                )
            },
            (ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant,),
            "ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidChars",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "variant-name&&": (
                    lambda r: isinstance(
                        r,
                        ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant,
                    ),
                    lambda r: {"variant-name&&": r.model_dump(by_alias=True)},
                )
            },
            "ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidChars",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TestEnumWithRenameToInvalidCharsVariant1Variant = (
                ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidCharsVariant1Variant
            )
            TestEnumWithRenameToInvalidChars = (
                ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidChars
            )


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars]: Response containing reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[
            reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars
        ] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars]: Response containing reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestEnumWithRenameToInvalidChars,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsSerdeTestEnumWithRenameToInvalidChars,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
